# llama.cpp-gemmini

./: build-riscv.sh
cmake/: riscv-static.cmake  riscv.cmake
ggml/: CMakeLists.txt
ggml/include/: ggml-gemmini.h
ggml/src/: CMakeLists.txt  ggml-backend-reg.cpp
ggml/src/ggml-gemmini/: CMakeLists.txt  ggml-gemmini-tensor.cpp  ggml-gemmini-util.h  ggml-gemmini.cpp  run_llama.sh
